--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,7 +39,7 @@ on early-init
   
 on init
     # Configure Zram
-    write /sys/block/zram0/comp_algorithm lz4
+    write /sys/block/zram0/comp_algorithm zstd
     
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
